// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct process dynamic placet 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "withWrapper": false,
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
<!--0-->
<!--0-->
",
}
`;

exports[`correct process dynamic placet 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "withWrapper": true,
  },
  "html": "
<div class=\\"wrapper\\">
  <h1>Title</h1>
  <div>Content for dummy component</div>
</div>
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "routerData": Object {
      "activePageComponent": [Function],
      "activePageOptions": Object {
        "path": "base",
        "text": "Base page",
      },
      "name": "",
      "pageLoaded": false,
      "params": Object {},
      "url": "",
    },
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
",
}
`;
